# valheim-opt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/LightningScanner/: CMakeLists.txt  LightningScanner.hpp  Pattern.hpp
lib/LightningScanner/backends/: Avx2.hpp  Scalar.hpp  Sse42.hpp
lib/LightningScanner/src/: CpuInfo.cpp
lib/LightningScanner/src/backends/: Avx2.cpp  Scalar.cpp  Sse42.cpp
src/: d3d11.def  impl.cpp  impl.h  log.h  main.cpp  shaderbool.h  util.h
src/shaders/: snow.hpp
